# sp-solution

./: .agentsignore  .dockerignore  AGENTS.md  Dockerfile  Dockerfile.mcp  README.md  SAC2.md  docker-compose.yml  pyproject.toml  идеи.md
SAC/: SAC1.md  SAC3.md  SAC_Graph.md
docker/: mcp-entrypoint.sh
examples/: answer.txt  main.ipynb
incidents/: 1.txt  2.txt  3.txt
scripts/: repl.sh
src/sp_solution/: __init__.py  config.py  models.py  session.py
src/sp_solution.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sp_solution/agent/: graph.py  langgraph_agent.py  llm.py
src/sp_solution/browser/: mcp.py
src/sp_solution/cli/: repl.py
src/sp_solution/observation/: __init__.py
src/sp_solution/policy/: __init__.py
src/sp_solution/transport/: api.py
