[project]
name = "sp-solution"
version = "0.1.0"
description = "MVP agent framework with FastAPI transport, MCP browser, and LangGraph loop"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Codex" }]

dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "typer>=0.12",
  "rich>=13.7",
  "prompt_toolkit>=3.0",
  "httpx>=0.27",
  "websockets>=12.0",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "langchain>=0.2.10",
  "langgraph>=0.2.0",
  "langchain-openai>=0.1.22",
]

[project.scripts]
sp-server = "sp_solution.transport.api:main"
sp-cli = "sp_solution.cli.repl:app"

[tool.ruff]
line-length = 100
